# cloud-asset-security-review

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  Dockerfile  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: test.yml
docs/: ARCHITECTURE.md  DESIGN.md  DOCUMENT_GOVERNANCE.md  PRODUCTION_SETUP.md  README.md  SECURITY_OPERATIONS.md  THREAT_MODEL.md  sample-report-example.com.md  sample-report.json  sample-report.md
docs/sample-reports/: a1b2c3d4e5.execute-api.eu-west-1.amazonaws.com.json  a1b2c3d4e5f6.lambda-url.us-east-1.on.aws.json  acme-analytics-exports.s3.amazonaws.com.json  acme-labs.com.json  admin-staging.payments.example.com.json  api-internal.acme-corp.com.json  checkout.example.com.json  ec2-203-0-113-42.us-west-2.compute.amazonaws.com.json  example.com.json  grafana.example.com.json  search-public-alb-1234567890.us-east-1.elb.amazonaws.com.json  shop.example.com.json
examples/: run_local.sh
infra/: eventbridge-rules.json  k8s-scan-job.yaml  step-functions.asl.json
infra/terraform/: README.md  backend.tf.example  ecr.tf  ecs.tf  eventbridge.tf  iam.tf  lambda.tf  network.tf  outputs.tf  s3.tf  sqs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: build_lambda_zip.sh  build_sample_pdfs.py  set_scanner_secret.sh
src/asset_review/: __init__.py  cli.py  (+3 more)
tests/: test_checks.py  test_config.py  test_dashboard_pdf.py  test_discovery.py  test_hardening.py  test_pipeline.py  test_slack.py  test_sqs_path.py  test_storage_s3.py
(+38 files in other folders)
