[project]
name = "cloud-asset-security-review"
version = "0.1.0"
description = "AI-assisted security review of newly created internet-facing AWS assets"
readme = "README.md"
requires-python = ">=3.10"
# Core is stdlib-only. Extras enable the LLM review (anthropic) and real AWS mode (boto3).
dependencies = []

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
aws = ["boto3>=1.34"]
dns = ["dnspython>=2.4"]   # optional: more robust CNAME resolution for takeover detection
crypto = ["cryptography>=42"]  # optional: robust TLS cert parsing (public API vs stdlib private)
dev = ["pytest>=8.0", "boto3>=1.34", "moto[sqs]>=5.0"]

[project.scripts]
asset-review = "asset_review.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
